# freegemas

./: .gitignore  CMakeLists.txt  freegemas.desktop
debian/: README  README.Debian  README.source  changelog  control  copyright
debian/source/: options
include/: Config.h.in  FloatingScore.h  JewelGroupAnim.h  ParticleSystem.h
snap/: snapcraft.yaml
src/: BaseButton.cpp  Game.cpp  GameBoard.cpp  GameBoardSounds.cpp  GameHint.cpp  GameIndicators.cpp  ScoreTable.cpp  StateGame.cpp  StateHowtoplay.cpp  StateMainMenu.cpp
